objects/Interview__c.object
<CustomObject>
    <description>Interview Details</description>
    <fields>
        <fullName>Job_Applicant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job Applicant</label>
        <referenceTo>Job_Applicant__c</referenceTo>
        <relationshipLabel>Interviews</relationshipLabel>
        <relationshipName>Interviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <formula>Job_Applicant__r.Job_No__r.Job_Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Selected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Interview</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Interview Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>